--- a/src/app/planejar-viagem/planejar-viagem.component.html
+++ b/src/app/planejar-viagem/planejar-viagem.component.html
@@ -4,42 +4,43 @@
   <div class="linha">
     <div class="coluna">
       <label for="motorista">Motorista</label>
-      <input type="text" id="motorista" placeholder="Nome" [(ngModel)]="motorista">
+      <input type="text" id="motorista" placeholder="Nome" [(ngModel)]="carona.motorista">
     </div>
     <div class="coluna">
       <label for="data-saida">Data de saída</label>
-      <input type="date" id="data-saida" [(ngModel)]="dataSaida">
+      <input type="date" id="data-saida" [(ngModel)]="carona.dataSaida">
     </div>
     <div class="coluna">
       <label for="endereco-partida">Endereço de partida</label>
-      <input type="text" id="endereco-partida" placeholder="Endereço" [(ngModel)]="enderecoPartida">
+      <input type="text" id="endereco-partida" placeholder="Endereço" [(ngModel)]="carona.enderecoPartida">
     </div>
   </div>
 
   <div class="linha">
     <div class="coluna">
       <label for="endereco-chegada">Endereço de chegada</label>
-      <input type="text" id="endereco-chegada" placeholder="Endereço" [(ngModel)]="enderecoChegada">
+      <input type="text" id="endereco-chegada" placeholder="Endereço" [(ngModel)]="carona.enderecoChegada">
     </div>
     <div class="coluna">
       <label for="valor">Valor</label>
-      <input type="number" id="valor" [(ngModel)]="valor">
+      <input type="number" id="valor" [(ngModel)]="carona.valor">
     </div>
     <div class="coluna">
       <label for="vagas">Vagas</label>
-      <input type="number" id="vagas" [(ngModel)]="vagas">
+      <input type="number" id="vagas" [(ngModel)]="carona.vagas">
     </div>
   </div>
 
   <div class="linha">
     <div class="coluna">
       <label for="observacoes">Observações</label>
-      <select id="observacoes" [(ngModel)]="observacoes" (change)="mostrarObservacoes()">
-        <option value="sim">Sim</option>
-        <option value="nao">Não</option>
+      <select id="observacoes" [(ngModel)]="carona.observacoes" (change)="mostrarObservacoes()">
+        <option [value]="true">Sim</option>
+        <option [value]="false">Não</option>
       </select>
     </div>
   </div>
+  
 
   <div class="linha" *ngIf="exibirObservacoes">
     <div class="coluna">
