Alterações final do cadastrar viagens

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,49 +14,49 @@
 
     <!-- Menu -->
     <ul class="menu">
-        <li (click)="selecionarItem(0, $event)" [routerLink]="'/tela-principal'" 
-            [ngClass]="{'selecionado': itemSelecionado === 0}" 
+        <li (click)="selecionarItem(0, $event)" [routerLink]="'/tela-principal'"
+            [ngClass]="{'selecionado': itemSelecionado === 0}"
             role="button" aria-label="Página Inicial">
             <mat-icon>home</mat-icon>
             <span *ngIf="!isCollapsed">Home</span>
             <mat-icon class="direita">chevron_right</mat-icon>
         </li>
-    
-        <li (click)="selecionarItem(1, $event)" [routerLink]="'/minhas-viagens'" 
-            [ngClass]="{'selecionado': itemSelecionado === 1}" 
+
+        <li (click)="selecionarItem(1, $event)" [routerLink]="'/listar-viagens'"
+            [ngClass]="{'selecionado': itemSelecionado === 1}"
             role="button" aria-label="Minhas viagens">
             <mat-icon>luggage</mat-icon>
             <span *ngIf="!isCollapsed">Minhas viagens</span>
             <mat-icon class="direita">chevron_right</mat-icon>
         </li>
-    
-        <li (click)="selecionarItem(2, $event)" [routerLink]="'/planejar-viagem'" 
-            [ngClass]="{'selecionado': itemSelecionado === 2}" 
+
+        <li (click)="selecionarItem(2, $event)" [routerLink]="'/cadastrar-viagem'"
+            [ngClass]="{'selecionado': itemSelecionado === 2}"
             role="button" aria-label="Planejar viagem">
             <mat-icon>directions_car</mat-icon>
             <span *ngIf="!isCollapsed">Planejar viagem</span>
             <mat-icon class="direita">chevron_right</mat-icon>
         </li>
-    
-        <li (click)="selecionarItem(3, $event)" [routerLink]="'/listar-viagens'" 
-            [ngClass]="{'selecionado': itemSelecionado === 3}" 
+
+        <li (click)="selecionarItem(3, $event)" [routerLink]="'/listar-viagens'"
+            [ngClass]="{'selecionado': itemSelecionado === 3}"
             role="button" aria-label="Listar viagens">
             <mat-icon>emoji_transportation</mat-icon>
             <span *ngIf="!isCollapsed">Listar viagens</span>
             <mat-icon class="direita">chevron_right</mat-icon>
         </li>
-    
-        <li (click)="selecionarItem(4, $event)" [routerLink]="'/help'" 
-            [ngClass]="{'selecionado': itemSelecionado === 4}" 
+
+        <li (click)="selecionarItem(4, $event)" [routerLink]="'/help'"
+            [ngClass]="{'selecionado': itemSelecionado === 4}"
             role="button" aria-label="Ajuda">
             <mat-icon>help</mat-icon>
             <span *ngIf="!isCollapsed">Help</span>
             <mat-icon class="direita">chevron_right</mat-icon>
         </li>
     </ul>
-    
 
-    
+
+
 
     <!-- Usuário -->
     <div class="user">
@@ -72,6 +72,6 @@
 <router-outlet></router-outlet>
 
   <div class="content">
-    <router-outlet></router-outlet> 
+    <router-outlet></router-outlet>
   </div>
 </div>
