--- a/src/app/CRUD/cadastrar-viagem/planejar-viagem.component.html
+++ b/src/app/CRUD/cadastrar-viagem/planejar-viagem.component.html
@@ -40,11 +40,10 @@
       </select>
     </div>
   </div>
-  
 
   <div class="linha" *ngIf="exibirObservacoes">
     <div class="coluna">
-      <textarea id="observacoes-texto" placeholder="Escreva suas observações" [(ngModel)]="observacoesTexto"></textarea>
+      <textarea id="observacoes-texto" placeholder="Escreva suas observações" [(ngModel)]="carona.textoObservacoes"></textarea>
     </div>
   </div>
 
