--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,175 +1,9 @@
-.container {
-  display: flex;
-  height: 100vh; 
-}
-
-.sidebar {
-  width: 250px; 
-  background-color: #f8f9fa; 
-  height: 100vh; 
-  position: fixed;
-  left: 0;
-  top: 0;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-}
-
 .content {
-  margin-left: 250px;
-  flex-grow: 1;
-  padding: 20px;
-}
-
-
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-}
-
-
-.sidebar {
-    width: 270px;
-    height: 100vh;
-    background-color: white;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 20px;
-    transition: width 0.3s;
-    overflow: hidden;
+    min-width: 100vw;
+    height: 100%;
 }
 
-.sidebar.collapsed {
-    width: 80px;
+main {
+    width: 100%;
 }
-
-
-.top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-
-.toggle-btn {
-    background: none;
-    border: none;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-
-.logo {
-    display: flex;
-    align-items: center;
-    justify-content: space-between; 
-    padding-bottom: 20px;
-    padding-top: 20px;
-}
-
-.logo img {
-    width: 43px;
-    height: auto;
-}
-
-.logo .logo-text {
-    margin-left: 10px;
-    font-size: 30px;
-    font-weight: bold;
-    color: #57429D;
-    padding-left: 10px;
-}
-.logo .pequenoCinza{
-    font-size: 15px;
-    color: gray;
-}
-
-
-.menu {
-    list-style: none;
-    padding-top: 20px;
-}
-
-.menu li {
-    display: flex;
-    align-items: center;
-    justify-content: space-between; 
-    position: relative;
-    padding: 10px;
-    color: #9197B3;
-    cursor: pointer;
-    transition: background 0.3s;
-    padding-bottom: 20px;
-
-}
-
-.menu li.selecionado {
-    background-color: #57429D; 
-    border-radius: 10px; 
-}
-
-
-.menu li.selecionado mat-icon,
-.menu li.selecionado i,
-.menu li.selecionado span {
-    color: white; 
-}
-
-.menu li:hover {
-    border-radius: 10px;
-}
-
-.menu li span {
-    flex-grow: 1;
-    text-align: left;
-}
-.menu li .Direita{
-    position: absolute;
-    right: 0.10px; 
-    font-size: 25px;
-}
-
-.menu i {
-    font-size: 18px;
-    width: 30px;
-    text-align: center;
-    color: #555;
-}
-
-
-.sidebar.collapsed .menu span {
-    display: none;
-}
-
-
-.user {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: auto;
-    padding-top: 20px;
-}
-
-.user img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-}
-
-.user .role {
-    color: #9197B3;
-}
-
-.user-info{
-    gap: 30px;
-}
-
-.sidebar.collapsed .user-info {
-    display: none;
-}
-
-
-
