--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
-body {
-    background-color: #e8e9eed0;
-  }
+/* You can add global styles to this file, and also import other style files */
+
+html, body { width: 100%; height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
