--- a/src/app/carona/formulario/formulario.component.html
+++ b/src/app/carona/formulario/formulario.component.html
@@ -38,5 +38,5 @@
       </div>
     </div>
   
-    <button class="botao-enviar" (click)="cadastrarViagem()">Planejar</button>
+    <button class="botao-enviar" mat-flat-button (click)="cadastrarViagem()">Planejar</button>
 </div>
