--- a/src/app/carona/formulario/formulario.component.css
+++ b/src/app/carona/formulario/formulario.component.css
@@ -1,14 +1,14 @@
 :host {
     width: 100%;
-    height: 100%;
     display: flex;
-    justify-content: center;
+    height: 680px;
+    justify-content:center;
     align-items: center;
+    flex-direction: column;
 }
 
 .page-content {
     width: 900px; 
-    height: 650px;
     background-color: white;
     border-radius: 20px;
     padding: 20px;
