--- a/src/app/carona/listagem/listagem.component.css
+++ b/src/app/carona/listagem/listagem.component.css
@@ -1,16 +1,40 @@
 :host {
     margin: 0; 
     width: 100%;
-    height: 100%;
+    height: 700px;
     display: flex; 
     justify-content: center;
     align-items: center;
 }
-
-.white-background {
-    width: 70%; 
-    height: 800px;
+.page-content {
+    width: 900px; 
+    height: 400px;
     background-color: white;
     border-radius: 20px;
-    padding: 20px;  
+    padding: 20px;
 }
+table {
+    width: 100%; /* Deixa a tabela esticada até a largura máxima */
+    background-color: white; /* Cor de fundo branca */
+    border-radius: 12px; /* Bordas arredondadas para a tabela */
+    overflow: hidden; 
+    font-size: 18px; 
+}
+th {
+    color: #a8a3a3; 
+    padding: 16px; 
+    text-align: left; 
+    border-bottom: 1px solid rgb(181, 181, 181); 
+}
+td {
+    border-bottom: 1px solid rgb(181, 181, 181);  
+}
+
+::ng-deep .mat-mdc-paginator-container {
+    background-color: white ; 
+    border-radius: 5px;
+}
+
+
+
+
