--- a/src/app/carona/formulario/formulario.component.css
+++ b/src/app/carona/formulario/formulario.component.css
@@ -1,7 +1,7 @@
 :host {
     width: 100%;
     display: flex;
-    height: 680px;
+    height: 100%;
     justify-content:center;
     align-items: center;
     flex-direction: column;
