--- a/src/app/layout/sidenav/sidenav.component.css
+++ b/src/app/layout/sidenav/sidenav.component.css
@@ -1,8 +1,3 @@
-.container {
-    display: flex;
-    height: 100vh;
-}
-
 .content {
     flex-grow: 1;
     padding: 20px;
@@ -11,7 +6,7 @@
 
 .sidebar {
     width: 270px;
-    height: 100vh;
+    height: 100%;
     background-color: white;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     display: flex;
