--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -1,23 +1,25 @@
 <div class="sidebar" [class.collapsed]="isCollapsed">
-    <div class="top">
-        <button (click)="toggleSidebar()" class="toggle-btn">
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="logo">
-            <img src="logo.png" alt="Logo">
-            <span class="logo-text" *ngIf="!isCollapsed">VamBora <small class="pequenoCinza">v.01</small></span>
+    <div class="sidebar-links">
+        <div class="top">
+            <button (click)="toggleSidebar()" class="toggle-btn">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="logo">
+                <img src="logo.png" alt="Logo">
+                <span class="logo-text" *ngIf="!isCollapsed">VamBora <small class="pequenoCinza">v.01</small></span>
+            </div>
         </div>
+    
+        <ul class="menu">
+            <li *ngFor="let item of menuItems; let i = index" (click)="selecionarItem(i, $event)" 
+                [routerLink]="item.link" [ngClass]="{'selecionado': itemSelecionado === i}"
+                role="button" [attr.aria-label]="'Página Inicial'">
+              <mat-icon>{{ item.icon }}</mat-icon>
+              <span *ngIf="!isCollapsed">{{ item.label }}</span>
+              <mat-icon class="direita">chevron_right</mat-icon> 
+            </li>
+        </ul>
     </div>
-
-    <ul class="menu">
-        <li *ngFor="let item of menuItems; let i = index" (click)="selecionarItem(i, $event)" 
-            [routerLink]="item.link" [ngClass]="{'selecionado': itemSelecionado === i}"
-            role="button" [attr.aria-label]="'Página Inicial'">
-          <mat-icon>{{ item.icon }}</mat-icon>
-          <span *ngIf="!isCollapsed">{{ item.label }}</span>
-          <mat-icon class="direita">chevron_right</mat-icon> 
-        </li>
-      </ul>
 
     <div class="user">
         <img src="motorista.png" alt="Usuário">
