--- a/src/app/tela-principal/tela-principal.component.css
+++ b/src/app/tela-principal/tela-principal.component.css
@@ -1,7 +1,7 @@
 :host {
     margin: 0; 
     width: 100%;
-    height: 700px;
+    height: 100%;
     display: flex; 
     justify-content: center;
     align-items: center;
