--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    box-sizing: border-box;
+}
 
-html, body { width: 100%; height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+    width: 100%;
+    max-height: 100vh;
+    min-height: 100vh;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
