--- a/src/app/carona/listagem/listagem.component.css
+++ b/src/app/carona/listagem/listagem.component.css
@@ -1,186 +1,36 @@
-.container {
-    display: flex;
-}
-
-.content {
-    flex-grow: 1;
-    padding: 20px;
-    transition: margin-left 0.3s ease-in-out;
-}
-
-.sidebar {
-    width: 260px;
-    background-color: white;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    transition: width 0.3s ease-in-out;
-    overflow: hidden;
-    position: relative;
-}
-
-.sidebar.collapsed {
-    width: 80px;
-}
-
-.content {
-    margin-left: 270px;
-}
-
-.sidebar.collapsed ~ .content {
-    margin-left: 80px;
-}
-
-.top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+:host {
+    margin: 0; 
     width: 100%;
-}
-
-.toggle-btn {
-    background: none;
-    border: none;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    padding: 20px 0;
-}
-
-.logo img {
-    width: 43px;
-    height: auto;
-    transition: width 0.3s ease-in-out;
-}
-
-.logo .logo-text {
-    margin-left: 10px;
-    font-size: 30px;
-    font-weight: bold;
-    color: #57429D;
-    padding-left: 10px;
-    transition: opacity 0.3s ease-in-out, width 0.3s ease-in-out;
-}
-
-.logo .pequenoCinza {
-    font-size: 15px;
-    color: gray;
-    transition: opacity 0.3s ease-in-out, width 0.3s ease-in-out;
-}
-
-.sidebar.collapsed .logo-text,
-.sidebar.collapsed .pequenoCinza {
-    opacity: 0;
-    width: 0;
-}
-
-.menu {
-    list-style: none;
-    padding: 0;
-    padding-top: 20px;
-    width: 100%;
-}
-
-.menu li {
-    display: flex;
-    align-items: center;
-    position: relative;
-    padding: 12px 15px;
-    color: #9197B3;
-    cursor: pointer;
-    transition: background 0.3s ease-in-out;
-    border-radius: 10px;
-}
-
-.menu li.selecionado {
-    background-color: #57429D;
-}
-
-.menu li.selecionado mat-icon,
-.menu li.selecionado i,
-.menu li.selecionado span {
-    color: white;
-}
-
-.menu li:hover {
-    background-color: rgba(87, 66, 157, 0.1);
-}
-
-.menu li span {
-    flex-grow: 1;
-    text-align: left;
-    margin-left: 14px;
-    transition: opacity 0.3s ease-in-out, width 0.3s ease-in-out;
-    margin-right: 25px;
-}
-
-
-.menu li .Direita {
-    position: absolute;
-    right: 15px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
-    color: #9197B3;
-    transition: opacity 0.3s ease-in-out;
-}
-
-.sidebar.collapsed .menu span {
-    opacity: 0;
-    width: 0;
-}
-
-
-.menu li:hover .Direita,
-.menu li.selecionado .Direita {
-    color: white;
-}
-
-.user {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: auto;
-    padding-top: 20px;
-    width: 100%;
-}
-
-.user img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    transition: width 0.3s ease-in-out;
-}
-
-.user .role {
-    color: #9197B3;
-    transition: opacity 0.3s ease-in-out, width 0.3s ease-in-out;
-}
-
-.user-info {
-    gap: 30px;
-}
-
-.sidebar.collapsed .user-info {
-    opacity: 0;
-    width: 0;
-}
-
-.collapse-trigger {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 10px;
     height: 100%;
-    cursor: pointer;
-    background: transparent;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+.page-content {
+    width: 900px; 
+    height: 400px;
+    background-color: white;
+    border-radius: 20px;
+    padding: 20px;
+}
+table {
+    width: 100%; /* Deixa a tabela esticada até a largura máxima */
+    background-color: white; /* Cor de fundo branca */
+    border-radius: 12px; /* Bordas arredondadas para a tabela */
+    overflow: hidden; 
+    font-size: 18px; 
+}
+th {
+    color: #a8a3a3; 
+    padding: 16px; 
+    text-align: left; 
+    border-bottom: 1px solid rgb(181, 181, 181); 
+}
+td {
+    border-bottom: 1px solid rgb(181, 181, 181);  
+}
+
+::ng-deep .mat-mdc-paginator-container {
+    background-color: white ; 
+    border-radius: 5px;
 }
