--- a/src/app/carona/listagem/listagem.component.css
+++ b/src/app/carona/listagem/listagem.component.css
@@ -7,16 +7,15 @@
     align-items: center;
 }
 .page-content {
-    width: 900px; 
-    height: 400px;
+    width: 900px;
     background-color: white;
     border-radius: 20px;
     padding: 20px;
 }
 table {
-    width: 100%; /* Deixa a tabela esticada até a largura máxima */
-    background-color: white; /* Cor de fundo branca */
-    border-radius: 12px; /* Bordas arredondadas para a tabela */
+    width: 100%; 
+    background-color: white; 
+    border-radius: 12px; 
     overflow: hidden; 
     font-size: 18px; 
 }
