--- a/src/app/carona/listagem/listagem.component.html
+++ b/src/app/carona/listagem/listagem.component.html
@@ -29,19 +29,24 @@
       </ng-container>
 
       <ng-container matColumnDef="vagas">
-        <th mat-header-cell *matHeaderCellDef> Vagas </th>
-        <td mat-cell *matCellDef="let element"> {{element.vagas}} </td>
-      </ng-container>
-      
-      <ng-container matColumnDef="textoObservacoes">
-        <th mat-header-cell *matHeaderCellDef> Observações </th>
-        <td mat-cell *matCellDef="let element"> {{element.textoObservacoes}} </td>
+        <th mat-header-cell *matHeaderCellDef>
+          Vagas
+        </th>
+        <td mat-cell *matCellDef="let element">
+          <mat-chip>
+            {{element.vagas}}
+          </mat-chip>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5]" showFirstLastButtons
-          aria-label="Select page of periodic elements"></mat-paginator>
+    <mat-paginator 
+            [length]="100"
+            [pageSize]="10"
+            [pageSizeOptions]="[5, 10, 25, 100]"
+            aria-label="Select page">
+    </mat-paginator>
   </div>
 </div>
