--- a/src/app/carona/listagem/listagem.component.html
+++ b/src/app/carona/listagem/listagem.component.html
@@ -1,6 +1,6 @@
 <div class="page-content">
   <div class="white-background">
-    <h2>Minhas caronas</h2>
+    <h2>Lista de viagens disponíveis</h2>
 
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="motorista">
