--- a/src/app/tela-cadastro/tela-cadastro.component.html
+++ b/src/app/tela-cadastro/tela-cadastro.component.html
@@ -14,44 +14,44 @@
       </mat-tab-group>
   
       <form (ngSubmit)="onSubmit()">
-        <mat-form-field appearance="outline">
+        <mat-form-field class="form-field" appearance="outline">
           <mat-label>Nome</mat-label>
           <input matInput placeholder="Digite seu nome" [(ngModel)]="formData.nome" name="nome" required>
         </mat-form-field>
   
-        <mat-form-field appearance="outline">
+        <mat-form-field class="form-field" appearance="outline">
           <mat-label>Sobrenome</mat-label>
           <input matInput placeholder="Digite seu sobrenome" [(ngModel)]="formData.sobrenome" name="sobrenome" required>
         </mat-form-field>
   
-        <mat-form-field appearance="outline">
+        <mat-form-field class="form-field" appearance="outline">
           <mat-label>Telefone</mat-label>
           <input matInput placeholder="(83) 90000-0000" [(ngModel)]="formData.telefone" name="telefone" required>
         </mat-form-field>
   
-        <mat-form-field appearance="outline">
+        <mat-form-field class="form-field" appearance="outline">
           <mat-label>Email</mat-label>
           <input matInput placeholder="email@exemplo.com" [(ngModel)]="formData.email" name="email" required>
         </mat-form-field>
   
-        <mat-form-field appearance="outline">
+        <mat-form-field class="form-field" appearance="outline">
           <mat-label>Senha</mat-label>
           <input matInput type="password" placeholder="********" [(ngModel)]="formData.senha" name="senha" required>
         </mat-form-field>
   
         <!-- Campos exclusivos para Motorista -->
         <div *ngIf="selectedIndex === 1">
-          <mat-form-field appearance="outline">
+          <mat-form-field class="form-field" appearance="outline">
             <mat-label>CNH</mat-label>
             <input matInput placeholder="Número da sua CNH" [(ngModel)]="formData.cnh" name="cnh" required>
           </mat-form-field>
   
-          <mat-form-field appearance="outline">
+          <mat-form-field class="form-field" appearance="outline">
             <mat-label>Placa do Veículo</mat-label>
             <input matInput placeholder="ABC-1234" [(ngModel)]="formData.placa" name="placa" required>
           </mat-form-field>
   
-          <mat-form-field appearance="outline">
+          <mat-form-field class="form-field" appearance="outline">
             <mat-label>Modelo do Veículo</mat-label>
             <input matInput placeholder="Modelo do seu veículo" [(ngModel)]="formData.modelo" name="modelo" required>
           </mat-form-field>
@@ -59,7 +59,7 @@
   
         <!-- Campo para Passageiro -->
         <div *ngIf="selectedIndex === 0">
-          <mat-form-field appearance="outline">
+          <mat-form-field class="form-field" appearance="outline">
             <mat-label>CPF</mat-label>
             <input matInput placeholder="000.000.000-00" [(ngModel)]="formData.cpf" name="cpf" required>
           </mat-form-field>
