--- a/src/app/tela-login/tela-login.component.css
+++ b/src/app/tela-login/tela-login.component.css
@@ -12,9 +12,6 @@
     display: flex;
     background-color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    max-width: 1200px;
-    height: 80%;
     max-height: 800px;
     border-top-right-radius: 80px;
     border-bottom-right-radius: 80px;
@@ -45,7 +42,7 @@
 }
 
 .login-left p {
-    text-align: left;
+    text-align: center;
 
 }
 
@@ -59,16 +56,15 @@
 img {
     max-width: 80%;
     height: auto;
-    margin-bottom: 20px;
 }
 
 img[src*="logo.png"] {
     max-width: 20%;
-    text-align: left;
+    text-align: center;
 }
 
 img[src*="carro.png"] {
-    margin-top: 100px;
+    margin-top: 40px;
 }
 
 mat-form-field {
@@ -115,9 +111,8 @@ h1 {
     font-size: 2.5em;
     font-weight: bold;
     color: #170F49;
-    width: 50%;
     max-width: 500px;
-    padding: 10px;
+    padding: 40px;
     margin: 0 auto;
     text-align: left;
     display: block;
@@ -125,10 +120,6 @@ h1 {
 
 p {
     font-size: 1em;
-    width: 60%;
     max-width: 500px;
-    padding: 10px;
-    margin: 0 auto;
     text-align: center;
-    display: block;
 }
